[gd_scene load_steps=4 format=3 uid="uid://c5psffmv1afdo"]

[ext_resource type="Script" path="res://src/frame.gd" id="1_sjlwc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hutyg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhujw"]
size = Vector2(30, 74)

[node name="Door" type="Area2D" groups=["Player"]]
script = ExtResource("1_sjlwc")
metadata/Direction = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hutyg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_mhujw")
debug_color = Color(1.73271e-06, 0.383522, 0.450471, 0.42)

[node name="NewFrame" type="Marker2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
