[gd_scene load_steps=5 format=3 uid="uid://c5psffmv1afdo"]

[ext_resource type="Script" uid="uid://bt3pkvlpkcrsn" path="res://src/frame.gd" id="1_lu2ol"]
[ext_resource type="Texture2D" uid="uid://bxmdwpaure4ux" path="res://assets/sprites/ui/directiom_indict.png" id="2_70s1w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1ojx"]
size = Vector2(11.2502, 197.751)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70s1w"]
size = Vector2(168.5, 166.5)

[node name="PanelTransition" type="Area2D"]
script = ExtResource("1_lu2ol")
metadata/Direction = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_u1ojx")
debug_color = Color(1.19124e-06, 0.413376, 0.167811, 0.42)

[node name="NewFrame" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 16
texture = ExtResource("2_70s1w")

[node name="ArrowNotif" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowNotif"]
shape = SubResource("RectangleShape2D_70s1w")
